k8-deploy/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pdx-validator-dev
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: pdx-validator
    spec:
      containers:
        - name: pdx-validator
          image: 'pdxfinder/pdx-validator:dev'
          ports:
            - containerPort: 8080
