k8-deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdx-validator-dev-ingress
  namespace: pdx-gun
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - host:
      http:
        paths:
          - path: /pdxfinder/dev(/|$)(.*)
            backend:
              serviceName: pdx-validator-dev
              servicePort: 80
